# mcp_websearch

./: .gitignore  README.md  README_zh.md  pyproject.toml  search_server.py  test.py
src/: search_scraper_mgr.py  server.py
src/scraper/: base_scraper.py  playwright_scraper.py
src/websearch/: baidu_search.py  bing_search.py  ddgs_search.py  google_search.py
